@@ -12,6 +12,7 @@
 
     <properties>
         <mainClassServer>nl.altindag.server.App</mainClassServer>
+        <vm.args-for-netty>--add-opens java.base/jdk.internal.misc=ALL-UNNAMED -Dio.netty.tryReflectionSetAccessible=true</vm.args-for-netty>
     </properties>
 
     <dependencies>
@@ -97,6 +98,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${version.maven-surefire-plugin}</version>
+                <!-- temporally fix till there is a normal solution for netty to work under java 11 and above -->
+                <configuration>
+                    <argLine>${vm.args-for-netty}</argLine>
+                </configuration>
             </plugin>
 
             <plugin>
